# httpie-csrf

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/httpie_csrf/: adapter.py  plugin.py
tests/: test_httpie_csrf.py
