[project]
name = "httpie-csrf"
version = "1.0.0"
description = "CSRF plugin for HTTPie."
authors = [
    { name = "Xdynix", email = "Lizard.rar@gmail.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
